# s3-data-lake-mcp-server

./: .bedrock_agentcore.yaml  .gitignore  DEPLOYMENT_SUMMARY.md  GITHUB_SETUP.md  LICENSE  README.md  deploy_to_agentcore.sh  deploy_uv.py  generate_mock_data.py  github_setup_commands.sh  kiro_integration_guide.md  kiro_s3_mcp_wrapper.py  pyproject.toml  requirements.txt  run_local.py  test_deployed_mcp.py
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE.md  linkedin_viral_post.md
src/: __init__.py  s3_data_lake_mcp_server.py  test_s3_mcp_client.py  upload_sample_data.py
tests/: test_s3_mcp_server.py
